kubernetes/offers.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: offers
  labels:
    app: offers
spec:
  selector:
    matchLabels:
      app: offers
  replicas: 1
  template:
    metadata:
      labels:
        app: offers
    spec:
      containers:
      - name: offers
        image: gcr.io/totodom/offers:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: offers
  labels:
    app: offers
spec:
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 8000
  selector:
    app: offers
