kubernetes/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  namespace: default
spec:
  ingressClassName: kong
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: front
            port:
              number: 80
      - path: /users
        pathType: Prefix
        backend:
          service:
            name: users
            port:
              number: 80
      - path: /offers
        pathType: Prefix
        backend:
          service:
            name: offers
            port:
              number: 80
